<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#555555">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/cross"
        android:id="@+id/imageView3"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="10dp"
        />

    <ImageView
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:src="@drawable/cross"
        android:id="@+id/imageView4"
        android:layout_below="@+id/imageView3"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/john_snow"
        android:id="@+id/textView5"
        android:layout_marginTop="8dp"
        android:textSize="30sp"
        android:textColor="@color/white"
        android:layout_below="@+id/imageView4"
        android:layout_centerHorizontal="true" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/textView5"
        android:layout_centerHorizontal="true">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:textSize="20sp"
            android:gravity="center"
            android:text="@string/lshome"
            android:textColor="@color/white"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:textSize="20sp"
            android:gravity="center"
            android:text="@string/lscal"
            android:textColor="@color/white"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:textSize="20sp"
            android:gravity="center"
            android:text="@string/lsoverview"
            android:textColor="@color/white"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:textSize="20sp"
            android:gravity="center"
            android:text="@string/lsgroups"
            android:textColor="@color/white"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:textSize="20sp"
            android:gravity="center"
            android:text="@string/lslists"
            android:id="@+id/listtext"
            android:textColor="@color/white"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:textSize="20sp"
            android:gravity="center"
            android:text="@string/lsprofile"
            android:textColor="@color/white"/>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="TimeLine"
                android:id="@+id/buttontimeline"

                android:clickable="true"
                android:textColor="#ffffff" />

            <Button
                style="?android:attr/buttonStyleSmall"
                android:layout_width="48dp"
                android:layout_height="40dp"
                android:text="12"
                android:id="@+id/button2"
                android:background="#ea2121" />

        </LinearLayout>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:textSize="20sp"
            android:gravity="center"
            android:text="@string/lssettings"
            android:textColor="@color/white"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:textSize="20sp"
            android:gravity="center"
            android:text="@string/lslogout"
            android:textColor="@color/white"/>
    </LinearLayout>
</RelativeLayout>