<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:background="@drawable/login">

    <ImageView
        android:layout_width="300dp"
        android:layout_height="80dp"
        android:id="@+id/imageView2"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:src="@drawable/logo" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:textSize="25sp"
        android:inputType="textPersonName"
        android:hint="@string/user"
        android:ems="10"
        android:gravity="center"
        android:background="@color/white"
        android:id="@+id/editText"
        android:layout_marginTop="87dp"
        android:layout_below="@+id/imageView2"
        android:layout_alignLeft="@+id/editText2"
        android:layout_alignStart="@+id/editText2" />
    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:visibility="visible"
        android:background="#c1e0f5"
        android:layout_below="@+id/editText"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/view" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:inputType="textPassword"
        android:background="@color/white"
        android:hint="@string/pass"
        android:gravity="center"
        android:textSize="25sp"
        android:ems="10"
        android:id="@+id/editText2"
        android:layout_below="@+id/view"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="310dp"
        android:layout_height="50dp"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/logintxt"
        android:background="#02d857"
        android:textSize="25sp"
        android:textColor="@color/white"
        android:gravity="center"
        android:id="@+id/textView2"
        android:layout_below="@+id/editText2"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="35dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/account"
        android:id="@+id/textView3"
        android:textColor="@color/white"
        android:textSize="25sp"
        android:layout_alignParentBottom="true"
        android:layout_alignLeft="@+id/editText2"
        android:layout_alignStart="@+id/editText2"
        android:layout_marginLeft="20dp"
        android:layout_marginBottom="50dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/logintxt"
        android:id="@+id/login"
        android:textColor="#457dd6"
        android:textSize="25sp"
        android:layout_marginLeft="12dp"
        android:layout_alignTop="@+id/textView3"
        android:layout_toRightOf="@+id/textView3"
        android:layout_toEndOf="@+id/textView3" />


</RelativeLayout>